View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031682 | Open CASCADE | OCCT:Visualization | public | 2020-07-22 21:05 | 2020-12-02 17:13 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.4.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031682: Visualization - Prs3d_ShadingAspect::SetTransparency() has no effect with Graphic3d_TOSM_UNLIT shading model | ||||
Description | Setting Graphic3d_TOSM_UNLIT shading model on a model with transparency set via Prs3d_ShadingAspect::SetTransparency() has no effect. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box bs -1 -2 -3 2 4 6 box bb -2 -4 -5 4 8 9 explode b F vinit View1 vdisplay -dispMode 1 bs bb vfit vaspects bs -setColor RED vaspects bb -setColor GREEN -setTransparency 0.8 vaspects bb -setShadingModel UNLIT | ||||
Tags | No tags attached. | ||||
Test case number | v3d/glsl/transp1 | ||||
|
Branch CR31682 has been created by kgv. SHA-1: cc07d3180c48e31308d71c3f3b0108e1026fd4ca Detailed log of new commits: Author: kgv Date: Wed Jul 22 22:34:03 2020 +0300 0031682: Visualization - Prs3d_ShadingAspect::SetTransparency() has no effect with Graphic3d_TOSM_UNLIT shading model Prs3d_ShadingAspect::SetTransparency() now sets transparency also to interior color. AIS_RubberBand now uses Graphic3d_TOSM_UNLIT. |
|
Patch is ready for review in OCCT branch CR31682. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31682-master-KGV/ |
|
Dear Kirill, it solves our case. Thank you a lot for the fix. No comments to the patch, reviewed. |
|
Dear Igor, please raise modifications. OCCT - CR31682, Products - NOT Jenkins job is: http://jenkins-test-12.nnov.opencascade.com/view/CR31682-master-KGV/ Thank you for help |
|
Combination - OCCT branch : IR-2020-07-24 master SHA - 4c7a3faef5f292475c23ee615ad49d57fc039b58 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-07-24 SHA - be95aa91db3bd344c872901349e58022d3c687fc was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17271.39000000011 / 17230.04000000007 [+0.24%] Products Total CPU difference: 800.6699999999917 / 791.7399999999936 [+1.13%] Windows-64-VC14: OCCT Total CPU difference: 18742.140625 / 18745.390625 [-0.02%] Products Total CPU difference: 1329.234375 / 1321.390625 [+0.59%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31682 has been deleted by inv. SHA-1: cc07d3180c48e31308d71c3f3b0108e1026fd4ca |
occt: master 9f013fee 2020-07-22 19:34:03 Committer: bugmaster Details Diff |
0031682: Visualization - Prs3d_ShadingAspect::SetTransparency() has no effect with Graphic3d_TOSM_UNLIT shading model Prs3d_ShadingAspect::SetTransparency() now sets transparency also to interior color. AIS_RubberBand now uses Graphic3d_TOSM_UNLIT. |
Affected Issues 0031682 |
|
mod - src/AIS/AIS_RubberBand.cxx | Diff File | ||
mod - src/AIS/AIS_ViewController.cxx | Diff File | ||
mod - src/Prs3d/Prs3d_ShadingAspect.cxx | Diff File | ||
mod - tests/v3d/glsl/shading_models | Diff File | ||
add - tests/v3d/glsl/transp1 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-07-22 21:05 | kgv | New Issue | |
2020-07-22 21:05 | kgv | Assigned To | => kgv |
2020-07-22 21:05 | kgv | Summary | Visualization - Prs3d_ShadingAspect::SetTransparency() is ignored with Graphic3d_TOSM_UNLIT shading model => Visualization - Prs3d_ShadingAspect::SetTransparency() has no effect with Graphic3d_TOSM_UNLIT shading model |
2020-07-22 22:32 | git | Note Added: 0093251 | |
2020-07-22 23:54 | kgv | Note Added: 0093252 | |
2020-07-22 23:54 | kgv | Assigned To | kgv => nds |
2020-07-22 23:54 | kgv | Status | new => resolved |
2020-07-23 10:15 | nds | Note Added: 0093253 | |
2020-07-23 10:20 | nds | Note Added: 0093254 | |
2020-07-23 10:20 | nds | Assigned To | nds => bugmaster |
2020-07-23 10:20 | nds | Status | resolved => reviewed |
2020-07-25 13:22 | bugmaster | Note Added: 0093321 | |
2020-07-25 13:22 | bugmaster | Status | reviewed => tested |
2020-07-25 13:35 | bugmaster | Test case number | => v3d/glsl/transp1 |
2020-07-25 13:57 | bugmaster | Changeset attached | => occt master 9f013fee |
2020-07-25 13:57 | bugmaster | Status | tested => verified |
2020-07-25 13:57 | bugmaster | Resolution | open => fixed |
2020-07-25 14:02 | git | Note Added: 0093330 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |